--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,13 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 
 /* Reset
 ---------------------------------*/
+:root{
+
+  --primary-color:#811ae8;
+  --secondary-color: #2ecc71;
+  --font-size: 16px;
+}
+
 ul {
     list-style: none;
 }
@@ -184,7 +191,7 @@ figure.effect-oscar:hover p {
 	opacity: 1;
 	-webkit-transform: scale(1);
 	transform: scale(1);
-	color:#fff;+++++++
+	color:#fff;
 }
 
 figure.effect-oscar:hover figcaption {
@@ -318,12 +325,12 @@ p {
 }
 
 .navStyle ul li a:hover {
-    color: #ED5441;
+    color: var(--primary-color);
 }
 
 .navStyle > li > a:hover, .nav > li > a:focus {
     text-decoration: none;
-    color: #ED5441;
+    color: var(--primary-color);
     background-color: transparent;
 }
 
@@ -340,7 +347,7 @@ p {
 .navStyle > li.active > a,
 .navStyle > li.active > a:hover {
     text-decoration: none;
-    color: #ED5441;
+    color: var(--primary-color);
     background-color: transparent;
 }
 
@@ -360,7 +367,7 @@ p {
 ---------------------------------*/
 
 .top_cont_outer {
-    background: #ED5441;
+    background: var(--primary-color);
     position: relative;
 	
     background: #CE1139;
@@ -454,8 +461,8 @@ a.read_more2:hover, a.read_more:hover {
 }
 a.read_more:hover {
     background: #fff;
-    color: #ED5441;
-    border: 1px solid #ED5441;
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
 }
 
 	
@@ -607,18 +614,18 @@ a.contact_btn {
     text-align: center;
     line-height: 49px;
     font-size: 16px;
-    color: #ED5441;
+    color: var(--primary-color);
     border-radius: 3px;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    border: 2px solid #ED5441;
+    border: 2px solid var(--primary-color);
     transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
     -webkit-transition: all 0.2s ease-in-out;
 }
 
 a.contact_btn:hover {
-    background: #ED5441;
+    background: var(--primary-color);
     color: #fff;
 }
 
@@ -663,7 +670,7 @@ a.contact_btn:hover {
 }
 
 .Portfolio-nav li a:hover {
-    background: #ED5441;
+    background: var(--primary-color);
     color: #fff;
     text-decoration: none;
 }
@@ -693,7 +700,7 @@ a.contact_btn:hover {
 }
 
 .Portfolio-nav li a.current {
-    background: #ED5441;
+    background: var(--primary-color);
     color: #fff;
     text-decoration: none;
 }
@@ -823,7 +830,7 @@ background-size: auto 100%;
 background-position-y: 70px;
 }
 #about-us .read-more{
-	border: 1px solid #ED5441;
+	border: 1px solid var(--primary-color);
 	color: #1a1a1a;
 }
 
@@ -1056,7 +1063,7 @@ border: 1px solid #CE1139;
 }
 
 .contact_block_icon.icon2 {
-    border-color: #ED5441;
+    border-color: var(--primary-color);
 }
 
 .contact_block_icon.icon3 {
@@ -1073,11 +1080,11 @@ border: 1px solid #CE1139;
 }
 
 .contact_block_icon.icon2 {
-    border-color: #ED5441;
+    border-color: var(--primary-color);
 }
 
 .contact_block_icon.icon2 span {
-    background: #ED5441;
+    background: var(--primary-color);
 }
 
 .contact_block_icon.icon3 {
@@ -1960,7 +1967,7 @@ font-size: 30px;
 padding: 60px 0 50px;
 } 
 .navbar-inverse .navbar-toggle .icon-bar{
-background:#ED5441;
+background:#811ae8;
 }
 .navbar-inverse .navbar-toggle {
 border-color: transparent;
