--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ p {
 }
 
 .navStyle ul li:first-child {
-	/*margin:0px;*/;
+	/*margin:0px;*/
 }
 
 .navStyle ul li:last-child {
@@ -335,12 +335,12 @@ p {
 }
 
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
-    color: #CA133A;
+    color:  var(--primary-color);
     background-color: transparent;
 }
 
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
-    color: #CB143B;
+    color:  var(--primary-color);
     background-color: transparent;
 }
 
@@ -370,7 +370,7 @@ p {
     background: var(--primary-color);
     position: relative;
 	
-    background: #CE1139;
+    background: var(--primary-color);
 	height:650px;
 }
 
@@ -478,7 +478,7 @@ a.read_more:hover {
 
 #service {
     padding: 60px 0px;
-    background: #CE1139;
+    background:  var(--primary-color);
 }
 #service h2{
   color: #fff;
@@ -835,8 +835,8 @@ background-position-y: 70px;
 }
 
 #about-us .read-more:hover{
-	background-color: #e74c3c;
-	border: 1px solid #e74c3c;
+	background-color:  var(--primary-color);
+	border: 1px solid  var(--primary-color);
 	color: #fff;
 }
 .about-us-post-container{
@@ -878,7 +878,7 @@ background-position-y: 70px;
 	position: absolute;
 	font-family: FontAwesome;
 	font-size: 1.125em;
-	color: #CE1139;
+	color:  var(--primary-color);
 	left: 0px;
 	top: 3px;
 }
@@ -1002,7 +1002,7 @@ margin-bottom: 5px;
 }
 
 .team_box ul li a.fa-pinterest:hover {
-    color: #cb2026;
+    color:  var(--primary-color);
 }
 
 .team_box ul li a.fa-google-plus:hover {
@@ -1022,12 +1022,12 @@ border-radius: 100%;
 font-size: 15px;
 line-height: 30px;
 outline: 0;
-color: #CE1139;
+color:  var(--primary-color);
 background-color: #fff;
 -webkit-transition: all .3s;
 -moz-transition: all .3s;
 transition: all .3s;
-border: 1px solid #CE1139;
+border: 1px solid  var(--primary-color);
 }
 #aboutUs {
     padding: 60px 0;
@@ -1176,7 +1176,7 @@ border: 1px solid #CE1139;
 }
 
 .pinterest a:hover {
-    color: #cb2026;
+    color:  var(--primary-color);
 }
 
 .gplus a:hover {
@@ -1222,7 +1222,7 @@ border: 1px solid #CE1139;
     width: 175px;
     height: 50px;
     letter-spacing: 0px;
-    background: #CE1139;
+    background:  var(--primary-color);
     border-radius: 3px;
     color: #ffffff;
     font-size: 16px;
@@ -1379,10 +1379,10 @@ border: 1px solid #CE1139;
 }
 
 #filters ul li a:hover h5, #filters ul li a.active h5 {
-    background: #CE1139;
+    background:  var(--primary-color);
     color: #FFFFFF;
     text-decoration: none;
-    border: #CE1139 solid 1px;
+    border:  var(--primary-color) solid 1px;
 }
 
 .section-title h2 {
